--- a/src/assets/videolb/css/overlay-minimal.css
+++ b/src/assets/videolb/css/overlay-minimal.css
@@ -2,7 +2,7 @@
 #voverlay {
 	
 	/* growing background image */
-	background-image:url(white.png);
+	background-image:url(https://raw.githubusercontent.com/iSC-Host/jdsf.isc/gh-pages/src/assets/videolb/white.png);
 	
 	/* dimensions after the growing animation finishes  */
 	width:1280px;
@@ -17,7 +17,7 @@
 
 /* default close button positioned on upper right corner */
 #voverlay .close {
-	background-image:url(close.png);
+	background-image:url(https://raw.githubusercontent.com/iSC-Host/jdsf.isc/gh-pages/src/assets/videolb/close.png);
 	position:absolute;
 	right:5px;
 	top:5px;
@@ -31,7 +31,7 @@
 	top:0;
 	width:100%;
 	height:100%;	
-	background:url(loading.gif) no-repeat 50% 50%;
+	background:url(https://raw.githubusercontent.com/iSC-Host/jdsf.isc/gh-pages/src/assets/videolb/loading.gif) no-repeat 50% 50%;
 }
 
 #voverlay .vcontainer > div{
