--- a/assets/css/webicons.css
+++ b/assets/css/webicons.css
@@ -117,14 +117,11 @@
 } 
 
  #Buttoncopy 
-{ 
-	 left: 181px; 
-	 top: 143px; 
-	 position: absolute; 
-	 width: 142px;
-	 height: 42px;
-	 z-index:11;
-} 
+{
+    position: fixed;
+    bottom: 100;
+    right: 0;
+}
 
  #ShoppingCart3copy 
 { 
